fix padding and text align on scoreboard

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
 
 .app {
     height: 100%;
-    padding: 24px 0px;
+    padding: 24px 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,8 +16,6 @@
     width: min(100%, 1110px);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(196px, 1fr));
-    /* grid-template-columns: repeat(4, 1fr); */
-    /* grid-template-rows: repeat(3, 20%); */
     padding: 24px;
     border-radius: 10px;
     gap: 24px;
