--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -16,6 +16,7 @@
     font-size: 1.8rem;
     font-weight: 600;
     border-bottom: 2px solid #a49c91;
+    text-align: center;
 }
 
 .scoreboard__game-rules {
